backdrop-filter & safari gap fixing

--- a/css/query.css
+++ b/css/query.css
@@ -125,7 +125,10 @@
 
     /*Mobile Navigation*/
     .main-nav {
-        background-color: white;
+        background-color: black;
+        -webkit-backdrop-filter:blur(10px);
+        backdrop-filter:blur(10px);
+
         width: 100%;
         height: 100vh;
         position: absolute;
@@ -160,8 +163,6 @@
         pointer-events: auto;
         visibility: visible;
         transform: translateX(0);
-
-
     }
 
     .open-nav .icon-mobile-nav[name="close-outline"] {
@@ -286,4 +287,64 @@
         height: 32rem;
         grid-row: 1;
     }
+}
+
+
+
+
+
+/*safari gap fix*/
+
+
+
+ /*https://unpkg.com/smoothscroll-polyfill@0.4.4/dist/smoothscroll.min.js*/
+
+
+.no-flexbox-gap .main-nav-list li:not(:last-child) {
+  margin-right: 4.8rem;
+}
+
+.no-flexbox-gap .list-item:not(:last-child) {
+  margin-bottom: 1.6rem;
+}
+
+.no-flexbox-gap .list-icon:not(:last-child) {
+  margin-right: 1.6rem;
+}
+
+.no-flexbox-gap .delivered-faces {
+  margin-right: 1.6rem;
+}
+
+.no-flexbox-gap .meal-attribute:not(:last-child) {
+  margin-bottom: 2rem;
+}
+
+.no-flexbox-gap .meal-icon {
+  margin-right: 1.6rem;
+}
+
+.no-flexbox-gap .footer-row div:not(:last-child) {
+  margin-right: 6.4rem;
+}
+
+.no-flexbox-gap .social-links li:not(:last-child) {
+  margin-right: 2.4rem;
+}
+
+.no-flexbox-gap .footer-nav li:not(:last-child) {
+  margin-bottom: 2.4rem;
+}
+
+@media (max-width: 75em) {
+  .no-flexbox-gap .main-nav-list li:not(:last-child) {
+    margin-right: 3.2rem;
+  }
+}
+
+@media (max-width: 59em) {
+  .no-flexbox-gap .main-nav-list li:not(:last-child) {
+    margin-right: 0;
+    margin-bottom: 4.8rem;
+  }
 }
