--- a/css/style.css
+++ b/css/style.css
@@ -103,6 +103,18 @@
   opacity: 50%;
 }
 
+/*Sticky Navigation*/
+.sticky{
+  position:sticky;
+  top:0;
+  z-index: 9999;
+  box-shadow: 0 10px 10px rgba(0,0,0,0.03);
+  background-color: rgba(255, 255, 255, 0.90);
+
+}
+
+
+
 /*============================================================*/
 /*                       HERO SECTION                         */
 /*============================================================*/
